--- a/JProject/nbproject/project.properties
+++ b/JProject/nbproject/project.properties
@@ -29,7 +29,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.PS_27-11-2017.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,6 +60,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.PS_27-11-2017=../../../NetBeansProjects/PS_27-11-2017
+reference.PS_27-11-2017.jar=${project.PS_27-11-2017}/dist/PS_27-11-2017.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
